# Image_Classification

./: README.md
image-classification/: .gitignore  README.md  pyproject.toml  requirements.txt
image-classification/conf/base/: catalog.yml  parameters.yml
image-classification/src/image_classification/: __init__.py  __main__.py  pipeline_registry.py
image-classification/src/image_classification/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py  processing.py
image-classification/src/image_classification/pipelines/model_training/: __init__.py  nodes.py  pipeline.py  predictions.py  training.py
